--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 /* Austin Brown 8929034 */
 body{
     height: 100vh;
-    width: 100vh;
+    width: 100vw;
     background-color: hsla(250, 30%, 60%, 0.8);
     font : normal italic normal 10px/1.5 Verdana, Arial, Helvetica, sans-serif;
     padding: 2em;
@@ -9,5 +9,40 @@ body{
 h2
 {
         color: #fc0;
-        font-size: 2rem;
+        font-size: 1rem;
+}
+header{
+    background-color: hsla(230, 74%, 57%, 0.7);
+}
+main{
+    float: left;
+    width: 65vw;
+    background-color: hsla(32, 74%, 74%, 0.7);
+}
+aside{
+    float: right;
+    width: 25vw;
+    height: 25vh;
+    background-color: hsla(186, 85%, 24%, 0.7);
+}
+footer{
+    clear: both;
+    background-color: hsla(309, 73%, 36%, 0.7);
+}
+.structural{
+    padding : 10px;
+    margin: 10px;
+    border: 2px solid black;
+}
+#para1{
+    color: rgb(123, 13, 114);
+}
+#para2{
+    color: rgb(202, 60, 207)
+}
+a:hover{
+    color : #09c
+}
+footer p{
+    font-size : .75em;
 }
