--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,11 @@ body{
     background-color: hsla(250, 30%, 60%, 0.8);
     font : normal italic normal 10px/1.5 Verdana, Arial, Helvetica, sans-serif;
     padding: 2em;
-}   
+}
+h1{
+    color: blueviolet; 
+    font-size: 30px;
+}    
 h2
 {
         color: #fc0;
@@ -17,17 +21,39 @@ h3{
 header{
     background-color: hsla(230, 74%, 57%, 0.7);
 }
+nav ul li{
+    display: inline;
+    list-style-type: none;
+}
+nav ul li a{
+    color: indigo;
+    border: 2px solid indigo;
+    background-color: cornsilk;
+    text-decoration: none;    
+}
+nav ul li a:hover{
+    color: cornsilk;
+    background-color: indigo;
+    border-color: cornsilk;
+}
 main{
     float: left;
     width: 65vw;
-    height: 26;
     background-color: hsla(32, 74%, 74%, 0.7);
 }
-aside{
+aside {
     float: right;
     width: 25vw;
-    height: 26vh;
     background-color: hsla(186, 85%, 24%, 0.7);
+}
+aside ul{
+    list-style-type: square;
+}
+aside li, aside a{
+    color: rgba(39, 41, 1, 0.8);
+}
+aside a:hover{
+    color: rgba(39, 100, 1, 0.8);
 }
 footer{
     clear: both;
@@ -44,8 +70,30 @@ footer{
 #para2{
     color: rgb(202, 60, 207)
 }
-a:hover{
-    color : #09c
+form{
+    border: 5px dashed darkblue;
+    padding: 5px;
+}
+input[type=text], input[type=email], input[type=submit], select, option{
+    display: block;
+    width: 50%;
+    height: 2em;
+}
+input[type=radio], input[type=checkbox]{
+    height: 2em;
+    width: 2em;
+}
+select, option, label, legend, input[type=submit]{
+    font-size: 1.5rem;
+    font-weight: bold;
+    font-variant: small-caps;
+}
+textarea{
+    display: block;
+    width: 50%;
+}
+fieldset{
+    border: none;
 }
 footer p{
     font-size : .75em;
