--- a/css/style.css
+++ b/css/style.css
@@ -1,19 +1,23 @@
 /* Austin Brown 8929034 */
+html{
+    font : normal normal normal 20px/1.5 Verdana, Arial, Helvetica, sans-serif;
+}
 body{
     height: 100vh;
     width: 100vw;
     background-color: hsla(250, 30%, 60%, 0.8);
-    font : normal italic normal 10px/1.5 Verdana, Arial, Helvetica, sans-serif;
     padding: 2em;
+    display: flex;
+    flex-direction: column;
 }
 h1{
     color: blueviolet; 
-    font-size: 30px;
+    font-size: 2rem;
 }    
 h2
 {
         color: #fc0;
-        font-size: 1rem;
+        font-size: 1.5rem;
 }
 h3{
     color : #bc4
@@ -27,7 +31,7 @@ nav ul li{
 }
 nav ul li a{
     color: indigo;
-    border: 2px solid indigo;
+    border: .25em solid indigo;
     background-color: cornsilk;
     text-decoration: none;    
 }
@@ -36,14 +40,19 @@ nav ul li a:hover{
     background-color: indigo;
     border-color: cornsilk;
 }
+section{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    justify-content: space-between;
+    align-items: stretch;
+}
 main{
-    float: left;
-    width: 65vw;
+    flex: 2 1 70%;
     background-color: hsla(32, 74%, 74%, 0.7);
 }
 aside {
-    float: right;
-    width: 25vw;
+    flex: 1 1 30%;
     background-color: hsla(186, 85%, 24%, 0.7);
 }
 aside ul{
@@ -56,13 +65,11 @@ aside a:hover{
     color: rgba(39, 100, 1, 0.8);
 }
 footer{
-    clear: both;
     background-color: hsla(309, 73%, 36%, 0.7);
 }
 .structural{
-    padding : 10px;
-    margin: 10px;
-    border: 2px solid black;
+    padding : 1rem;
+    margin: 1rem;
 }
 #para1{
     color: rgb(123, 13, 114);
@@ -71,8 +78,9 @@ footer{
     color: rgb(202, 60, 207)
 }
 form{
-    border: 5px dashed darkblue;
-    padding: 5px;
+    border: .25em dashed darkblue;
+    padding: .25em;
+    margin: auto;
 }
 input[type=text], input[type=email], input[type=submit], select, option{
     display: block;
@@ -95,6 +103,32 @@ textarea{
 fieldset{
     border: none;
 }
+#gallary{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
+    row-gap: 1em;
+    column-gap: 1em;
+}
+img{
+    width: 80%;
+    height: 80%;
+}
+figure{
+    border : 0.15em solid black;
+}
 footer p{
     font-size : .75em;
+}
+@media (max-width: 600px){
+    html{
+        font-size: 10px;
+    }
+    section{
+        display: block;
+    }
+    #gallery{
+        grid-template-columns: 1fr;
+        grid-template-rows: 1fr;
+    }
 }
